--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^2.4.1"
+    "@astrojs/svelte": "^2.2.0",
+    "astro": "^2.5.5",
+    "svelte": "^3.54.0"
   },
   "devDependencies": {
     "sass": "^1.62.1"
